src/function/ConvertMetadataToObject/action_when.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "||",
      peg$c1 = peg$literalExpectation("||", false),
      peg$c2 = function(left, right) { return { type: "condition_oper" , value:"OR", left, right }; },
      peg$c3 = "&&",
      peg$c4 = peg$literalExpectation("&&", false),
      peg$c5 = function(left, right) { return { type: "condition_oper" , value: "AND", left, right }; },
      peg$c6 = "(",
      peg$c7 = peg$literalExpectation("(", false),
      peg$c8 = ")",
      peg$c9 = peg$literalExpectation(")", false),
      peg$c10 = function(e) { return e; },
      peg$c11 = function(left, oper, right) { return {type: "number_compare_oper", value: oper, left: left, right: right}; },
      peg$c12 = function(left, oper, right) { return {type: "boolean_compare_oper", value: oper, left: left, right: right}; },
      peg$c13 = function(left, oper, right) { return {type: "string_compare_oper", value: oper, left: left, right: right}; },
      peg$c14 = function(left, oper, right) { return {type: "float_compare_oper", value: oper, left: left, right: right}; },
      peg$c15 = "+",
      peg$c16 = peg$literalExpectation("+", false),
      peg$c17 = function(left, oper, right) { return {type: "math_operation", value: oper.slice(1,-1)[0], left: left, right: right}; },
      peg$c18 = function() { return {type: "string_e", value: string_e}; },
      peg$c19 = "'",
      peg$c20 = peg$literalExpectation("'", false),
      peg$c21 = /^[a-zA-Z_]/,
      peg$c22 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c23 = /^[a-zA-Z_0-9]/,
      peg$c24 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
      peg$c25 = function() { return {type:'constant',dataType:'string' ,value :text().slice(1, -1)}; },
      peg$c26 = /^[a-zA-Z0-9_\-.:?!@#$%\^&*_+\\\/<> ]/,
      peg$c27 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-", ".", ":", "?", "!", "@", "#", "$", "%", "^", "&", "*", "_", "+", "\\", "/", "<", ">", " "], false, false),
      peg$c28 = function() { return {type:'constant', dataType:'string', value: text().slice(1, -1)}; },
      peg$c29 = "-",
      peg$c30 = peg$literalExpectation("-", false),
      peg$c31 = "*",
      peg$c32 = peg$literalExpectation("*", false),
      peg$c33 = "/",
      peg$c34 = peg$literalExpectation("/", false),
      peg$c35 = function() { return {type: "number_e", value: number_e}; },
      peg$c36 = /^[0-9]/,
      peg$c37 = peg$classExpectation([["0", "9"]], false, false),
      peg$c38 = function() { return {type:'constant',dataType:'number' ,value :parseInt(text(),10)}; },
      peg$c39 = function(left, oper, right) { return {type: "math_operation", value: oper, left: left, right: right}; },
      peg$c40 = function() { return {type: "float_e", value: float_e}; },
      peg$c41 = ".",
      peg$c42 = peg$literalExpectation(".", false),
      peg$c43 = function() { return {type:'constant',dataType:'float' ,value :parseFloat(text())}; },
      peg$c44 = "Max",
      peg$c45 = peg$literalExpectation("Max", false),
      peg$c46 = ",",
      peg$c47 = peg$literalExpectation(",", false),
      peg$c48 = function(value1, value2) { return {type: "utility_function", functionName: "max", value1: value1, value2: value2}; },
      peg$c49 = "Min",
      peg$c50 = peg$literalExpectation("Min", false),
      peg$c51 = function(value1, value2) { return {type: "utility_function", functionName: "min", value1: value1, value2: value2}; },
      peg$c52 = "Abs",
      peg$c53 = peg$literalExpectation("Abs", false),
      peg$c54 = function(value1) { return {type: "utility_function", functionName: "abs", value1: value1}; },
      peg$c55 = "true",
      peg$c56 = peg$literalExpectation("true", false),
      peg$c57 = function() { return { type:'constant',dataType: 'bool', value : true}; },
      peg$c58 = "false",
      peg$c59 = peg$literalExpectation("false", false),
      peg$c60 = function() { return { type:'constant',dataType: 'bool', value : false}; },
      peg$c61 = function(arg1) { return {type:"meta_function", functionName: "GetNumber", attributeName: arg1}; },
      peg$c62 = "!",
      peg$c63 = peg$literalExpectation("!", false),
      peg$c64 = function(not, arg1) {return {type: "meta_function", functionName:"GetBoolean", attributeName: arg1, negative: not==='!'? true:false }; },
      peg$c65 = function(arg1) { return {type: "meta_function", functionName:"GetString", attributeName: arg1}; },
      peg$c66 = function(arg1) { return {type: "meta_function", functionName:"GetFloat", attributeName: arg1}; },
      peg$c67 = "()",
      peg$c68 = peg$literalExpectation("()", false),
      peg$c69 = function() { return {type: "meta_function", functionName:"GetImage"}; },
      peg$c70 = function() { return {type: "meta_function", functionName:"GetBaseURI"}; },
      peg$c71 = function() { return {type: "meta_function", functionName:"GetTokenURI"}; },
      peg$c72 = function() { return {type: "meta_function", functionName:"GetBlockHeight"}; },
      peg$c73 = function(arg1) { return {type: "meta_function", functionName:"GetUTCBlockTimestamp", attributeName: arg1}; },
      peg$c74 = function(arg1, arg2) { return {type: "meta_function", functionName:"GetBlockTimestampByZone", attributeName: arg1, value1: arg2}; },
      peg$c75 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeUTCBefore", attributeName: arg1, value1: arg2}; },
      peg$c76 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeUTCAfter", attributeName: arg1, value1: arg2}; },
      peg$c77 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeBeforeByZone", attributeName: arg1, value1: arg2, value2: arg3}; },
      peg$c78 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeAfterByZone", attributeName: arg1, value1: arg2, value2: arg3}; },
      peg$c79 = "params[",
      peg$c80 = peg$literalExpectation("params[", false),
      peg$c81 = "]",
      peg$c82 = peg$literalExpectation("]", false),
      peg$c83 = "GetString()",
      peg$c84 = peg$literalExpectation("GetString()", false),
      peg$c85 = function(arg1) { return {type: "param_function", functionName:"GetString", attributeName: arg1}; },
      peg$c86 = "GetNumber()",
      peg$c87 = peg$literalExpectation("GetNumber()", false),
      peg$c88 = function(arg1) { return {type: "param_function", functionName:"GetNumber", attributeName: arg1}; },
      peg$c89 = "meta",
      peg$c90 = peg$literalExpectation("meta", false),
      peg$c91 = function() { return 'meta'; },
      peg$c92 = "GetNumber",
      peg$c93 = peg$literalExpectation("GetNumber", false),
      peg$c94 = function() { return 'GetNumber'; },
      peg$c95 = "GetBoolean",
      peg$c96 = peg$literalExpectation("GetBoolean", false),
      peg$c97 = function() { return 'GetBoolean'; },
      peg$c98 = "GetString",
      peg$c99 = peg$literalExpectation("GetString", false),
      peg$c100 = function() { return 'GetString'; },
      peg$c101 = "GetFloat",
      peg$c102 = peg$literalExpectation("GetFloat", false),
      peg$c103 = function() { return 'GetFloat'; },
      peg$c104 = "GetImage",
      peg$c105 = peg$literalExpectation("GetImage", false),
      peg$c106 = function() { return 'GetImage'; },
      peg$c107 = "GetBaseURI",
      peg$c108 = peg$literalExpectation("GetBaseURI", false),
      peg$c109 = function() { return 'GetBaseURI'; },
      peg$c110 = "GetTokenURI",
      peg$c111 = peg$literalExpectation("GetTokenURI", false),
      peg$c112 = function() { return 'GetTokenURI'; },
      peg$c113 = "GetBlockHeight",
      peg$c114 = peg$literalExpectation("GetBlockHeight", false),
      peg$c115 = function() { return 'GetBlockHeight'; },
      peg$c116 = "GetUTCBlockTimestamp",
      peg$c117 = peg$literalExpectation("GetUTCBlockTimestamp", false),
      peg$c118 = function() { return 'GetUTCBlockTimestamp'; },
      peg$c119 = "GetBlockTimestampByZone",
      peg$c120 = peg$literalExpectation("GetBlockTimestampByZone", false),
      peg$c121 = function() { return 'GetBlockTimestampByZone'; },
      peg$c122 = "BlockTimeUTCBefore",
      peg$c123 = peg$literalExpectation("BlockTimeUTCBefore", false),
      peg$c124 = function() { return 'BlockTimeUTCBefore'; },
      peg$c125 = "BlockTimeUTCAfter",
      peg$c126 = peg$literalExpectation("BlockTimeUTCAfter", false),
      peg$c127 = function() { return 'BlockTimeUTCAfter'; },
      peg$c128 = "BlockTimeBeforeByZone",
      peg$c129 = peg$literalExpectation("BlockTimeBeforeByZone", false),
      peg$c130 = function() { return 'BlockTimeBeforeByZone'; },
      peg$c131 = "BlockTimeAfterByZone",
      peg$c132 = peg$literalExpectation("BlockTimeAfterByZone", false),
      peg$c133 = function() { return 'BlockTimeAfterByZone'; },
      peg$c134 = function() { return '&&'; },
      peg$c135 = function() { return '||'; },
      peg$c136 = "<",
      peg$c137 = peg$literalExpectation("<", false),
      peg$c138 = function() { return '<'; },
      peg$c139 = ">",
      peg$c140 = peg$literalExpectation(">", false),
      peg$c141 = function() { return '>'; },
      peg$c142 = "<=",
      peg$c143 = peg$literalExpectation("<=", false),
      peg$c144 = function() { return '<='; },
      peg$c145 = ">=",
      peg$c146 = peg$literalExpectation(">=", false),
      peg$c147 = function() { return '>='; },
      peg$c148 = "==",
      peg$c149 = peg$literalExpectation("==", false),
      peg$c150 = function() { return '=='; },
      peg$c151 = "!=",
      peg$c152 = peg$literalExpectation("!=", false),
      peg$c153 = function() { return '!='; },
      peg$c154 = function() { return '+'; },
      peg$c155 = function() { return '-'; },
      peg$c156 = function() { return '*'; },
      peg$c157 = function() { return '/'; },
      peg$c158 = "%",
      peg$c159 = peg$literalExpectation("%", false),
      peg$c160 = function() { return '%'; },
      peg$c161 = peg$otherExpectation("whitespace"),
      peg$c162 = /^[ \t\n\r]/,
      peg$c163 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseexpression();

    return s0;
  }

  function peg$parseexpression() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseterm();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c0) {
          s3 = peg$c0;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseexpression();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c2(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseterm();
    }

    return s0;
  }

  function peg$parseterm() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsefactor();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s3 = peg$c3;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseterm();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c5(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsefactor();
    }

    return s0;
  }

  function peg$parsefactor() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseexpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 41) {
              s5 = peg$c8;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c10(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsecompare_e();
    }

    return s0;
  }

  function peg$parsecompare_e() {
    var s0, s1, s2, s3, s4, s5;
